# razzle

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  clang-format  compile_commands.json  debug.sh
arch/i386/: asm.c  gdt.c  handlers.h  idt.c  init.c  irq.c  irq.s  isr.s  loader.s  scheduler.c  syscall.c
iso/boot/grub/: menu.lst
kernel/: kernel.c  memory.c  ps2.c  scheduler.c  spin_lock.c  syscall.c  test_processes.c  vga.c
